
- Updated patches:

- Updated packages and libs:
    * git 1.7.6
    * iptables 1.4.11.1
    * libfreetz 0.5
    * lighttpd 1.4.29
    * minidlna 1.0.21
    * ncurses 5.9
    * openntpd 4.9
    * openvpn 2.2.1
    * readline 6.2
    * ser2net 2.7
    * sqlite 3.7.7.1
    * tinc 1.0.15
    * tmux 1.5
    * transmission 2.33

- Remove packages, libs, modules, tools:

- Firmware updates:
    * Please see FIRMWARES for the list of currently supported boxes and firmwares.

- BusyBox:

- Web interface:

- Other stuff:

=== Freetz-1.2-stable ===

- Build system:
  * fakeroot: bump version to 1.15.1
  * kernel-toolchain:
   + Bump binutils version to 2.18
   + Add gcc version 4.4.6
   + Add binutils version 2.21.52.0.2
   + Use gcc-3.4.6 for kernel versions 2.6.13.1 and 2.6.19.2
   + Use gcc-4.4.6 for kernel versions 2.6.28 and 2.6.32.21
   + Update download toolchains
  * target-toolchain:
   + Add gcc-4.4.6(default), gcc-4.5.3, and gcc-4.6.1, delete outdated versions
   + Bump binutils version to 2.21.52.0.2
   + Add uClibc-0.9.30.3 and uClibc-0.9.31.1, 0.9.32
   + Add gdb-6.8 and gdb-7.2, delete outdated versions
   + Update download toolchains:
    + Use gcc-4.4.6 for uClibc versions 0.9.28/29/30
    + Use gcc-4.5.3 for uClibc-0.9.31.1/0.9.32 toolchain
    + Remove kernel headers from download toolchains
   + Add install target for kernel headers
   + Update sys/queue.h in uClibc-0.9.28 toolchains
   + Enable mips-plt optimizations for gcc versions >= 4.4. These optimizations
     allow gcc to create binaries which are significantly smaller in size.
   + Add option to build uClibc with a reduced set of locales (saves > 200 KB)
   + Remove many unused symbols from libgcc_s (saves ~ 100 KB)
  * Bump ccache version to 3.1.5
  * patch-system: use shell-fuction isFreetzType (by kriegaex)
  * replace tar with busybox tar
  * patch-system: use shell function modsed
  * move packages and libs source dir to source/target-$(arch)_uClibc-$(version)