@@ -1122,11 +1122,3 @@ config FREETZ_TYPE_SPEEDPORT_W920V_LED_MODULE
 		If Y is choosen, this changes the semantics of the LEDs on the front
 		panel of your 7570/W920V box fitting the descriptions of the W920V.
 
-config FREETZ_PATCH_GETCONS
-	bool
-#	bool "Redirect console messages"
-	default n
-	help
-		Patch /etc/profile so that console messages are redirected to
-		the last opened console.
-
