@@ -39,6 +39,7 @@ Latest changes:
     * transmission 2.33
 
 - Remove packages, libs, modules, tools:
+    * Remove getcons patch (see #1026 for details)
 
 - Firmware updates:
     * Please see FIRMWARES for the list of currently supported boxes and firmwares.
